add basic expenses widget and profile with it on

--- a/application/being_a_civil_servant/templates/addreceipt.html
+++ b/application/being_a_civil_servant/templates/addreceipt.html
@@ -92,7 +92,7 @@
   </section>
 
   <section class="section">
-    <button class="button">Submit claim</button>
+    <a href="/signup/csprofile_more" class="button">Submit claim</a>
   </section>
 
 </main><!-- / #page-container -->
