add the start of a checklist

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -12,6 +12,7 @@
 @import 'components/profile_nav';
 @import 'components/add_widget';
 @import 'components/widget';
+@import 'components/checklist';
 
 // global for all profile based pages
 #global-header-bar {
