add basic people finder widget

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -27,6 +27,10 @@
   height: 330px;
 }
 
+.form {
+  @extend %contain-floats;
+}
+
 // for sections containing widgets
 .container {
   margin-top: $gutter-half;
