--- a/application/signup/templates/csprofile.html
+++ b/application/signup/templates/csprofile.html
@@ -11,6 +11,7 @@
       </section>
     </div>
     <div class="column-two-thirds">
+      {% include "partials/people_finder.html" ignore missing %}
       {% include "partials/add_expenses_widget.html" ignore missing %}
     <div>
   </div>
