--- a/application/signup/templates/csprofile_jobs_history.html
+++ b/application/signup/templates/csprofile_jobs_history.html
@@ -14,7 +14,63 @@
       </section>
     </div>
     <div class="column-three-quarter">
-      <h1 class="heading-large">Jobs</h1>
+      <h1 class="heading-large">Past roles</h1>
+      <ul class="section">
+
+        <li class="past-role">
+          <h3 class="heading-medium jd__role past-role__title">Front-end designer</h3>
+          <p class="jd__title--department">Government Digital Service (GDS)</p>
+          <div class="grid-row">
+            <div class="column-half">
+              <dl class="past-role__dates">
+                <dt>Start:</dt>
+                <dd>3rd Jan 2015</dd>
+              </dl>
+            </div>
+          </div>
+          <a href="">view job description for role</a>
+        </li>
+
+        <li class="past-role">
+          <h3 class="heading-medium jd__role past-role__title">Front-end developer</h3>
+          <p class="jd__title--department">Government Digital Service (GDS)</p>
+          <div class="grid-row">
+            <div class="column-half">
+              <dl class="past-role__dates">
+                <dt>Start:</dt>
+                <dd>12th Nov 2013</dd>
+              </dl>
+            </div>
+            <div class="column-half">
+              <dl class="past-role__dates">
+                <dt>End:</dt>
+                <dd>2nd Jan 2015</dd>
+              </dl>
+            </div>
+          </div>
+          <a href="">view job description for role</a>
+        </li>
+
+        <li class="past-role">
+          <h3 class="heading-medium jd__role past-role__title">Junior developer</h3>
+          <p class="jd__title--department">Ministry of Justice (MoJ)</p>
+          <div class="grid-row">
+            <div class="column-half">
+              <dl class="past-role__dates">
+                <dt>Start:</dt>
+                <dd>11th Nov 2013</dd>
+              </dl>
+            </div>
+            <div class="column-half">
+              <dl class="past-role__dates">
+                <dt>End:</dt>
+                <dd>22nd Feb 2011</dd>
+              </dl>
+            </div>
+          </div>
+          <a href="">view job description for role</a>
+        </li>
+      </ul>
     </div>
   </div>
 
