--- a/application/signup/templates/partials/service.html
+++ b/application/signup/templates/partials/service.html
@@ -4,7 +4,7 @@
   <div class="column-three-quarter">
     <h3 class="heading-small">{{ service.name }}</h3>
     <p class="text">{{ service.desc }}</p>
-    <p class="secondary">
+    <p class="secondary service__item__meta">
       <span>Permissions: {{ service.permissions }}</span>
       <span>Date approved: {{ service.approval_date }}</span>
     </p>
