add link to checklist page to home

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -63,6 +63,9 @@
     <li>
       <a href="/prejoining/pass_data">data request for pass</a>
     </li>
+    <li>
+      <a href="/signup/basicprofile/checklist">checklist</a>
+    </li>
   </ul>
 
   <h3 class="heading-medium">Professions</h3>
