--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -15,6 +15,8 @@
 @import 'components/widget';
 @import 'components/checklist';
 @import 'components/jobs_history';
+@import 'components/event';
+@import 'components/courses';
 
 // global for all profile based pages
 #global-header-bar {
