--- a/application/signup/templates/csprofile_learning.html
+++ b/application/signup/templates/csprofile_learning.html
@@ -8,19 +8,13 @@
   <section class="grid-row section">
     <div class="column-half">
       <h2 class="heading-medium">Mandatory courses</h2>
-      <ul>
-        <li class="course-list__item">
-          <div class="column-quarter course__date">Today</div>
-          <div class="column-three-quarter course-list__item__title course__status">Health & safety awareness</div>
-        </li>
-        <li class="course-list__item">
-          <div class="column-quarter course__date">18th June</div>
-          <div class="column-three-quarter course-list__item__title course__status course__status--started">Confirmation bias</div>
-        </li>
-        <li class="course-list__item">
-          <div class="column-quarter course__date">23rd June</div>
-          <div class="column-three-quarter course-list__item__title course__status course__status--completed">Fire safety</div>
-        </li>
+      <ul class="course-list">
+
+        {% from "partials/course_list.html" import build_course_item %}
+        {% for course in courses.mandatory %}
+          {{ build_course_item(course) }}
+        {% endfor %}
+
       </ul>
     </div>
     <div class="column-half">
