--- a/application/signup/templates/csprofile_learning.html
+++ b/application/signup/templates/csprofile_learning.html
@@ -5,9 +5,9 @@
 
 <main id="content" role="main">
   <h1 class="heading-large">Your learning</h1>
-  <section class="grid-row section">
+  <section class="grid-row section--bottom">
     <div class="column-half">
-      <h2 class="heading-medium">Mandatory courses</h2>
+      <h2 class="heading-small">Mandatory courses</h2>
       <ul class="course-list">
 
         {% from "partials/course_list.html" import build_course_item %}
@@ -16,9 +16,10 @@
         {% endfor %}
 
       </ul>
+      <a class="foot-link" href="/learning/mandatory">see full list of mandatory courses</a>
     </div>
     <div class="column-half">
-      <h2 class="heading-medium">Your courses</h2>
+      <h2 class="heading-small">Your courses</h2>
       <ul class="course-list">
 
         {% from "partials/course_list.html" import build_course_item %}
@@ -28,6 +29,47 @@
 
       </ul>
     </div>
+  </section>
+  <section class="section">
+    <h2 class="heading-small">Development pathways</h2>
+    <ul class="pathways-list">
+      <li class="development-path grid-row">
+        <div class="column-quarter">
+          Javascript
+        </div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-twelfth stage__status"></div>
+        <div class="column-twelfth stage__status"></div>
+        <div class="column-twelfth stage__status"></div>
+      </li>
+      <li class="development-path grid-row">
+        <div class="column-quarter">
+          Product design
+        </div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-twelfth stage__status"></div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-twelfth stage__status"></div>
+        <div class="column-twelfth stage__status"></div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-twelfth stage__status"></div>
+      </li>
+      <li class="development-path grid-row">
+        <div class="column-quarter">
+          CSS
+        </div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-twelfth stage__status"></div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+        <div class="column-twelfth stage__status stage__status--complete"></div>
+      </li>
+    </ul>
+    <a class="foot-link" href="/learning/mandatory">see pathways available to you</a>
   </section>
 </main>
 
