--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -27,6 +27,14 @@
   @include grid-column(3/4);
 }
 
+.column-eighth {
+  @include grid-column(1/8);
+}
+
+.column-twelfth {
+  @include grid-column(1/12);
+}
+
 .temp {
   height: 330px;
 }
@@ -51,4 +59,8 @@
 .info__item {
   font-weight: bolder;
   text-align: right;
+}
+
+.foot-link {
+  font-size: 16px;
 }
