add additional sections to learning page

--- a/application/signup/templates/csprofile_learning.html
+++ b/application/signup/templates/csprofile_learning.html
@@ -6,6 +6,40 @@
 <main id="content" role="main">
   <h1 class="heading-large">Your learning</h1>
   <section class="grid-row section--bottom">
+    <div class="column-third">
+      <h2 class="heading-small">Quick course search</h2>
+      <form action="/" method="post" class="form">
+        <!-- Full name -->
+        <div class="form-group">
+          <label class="form-label form-hint" for="full-name">Search by name, skill or keyword</label>
+          <input type="text" class="form-control-3-4" id="full-name">
+        </div>
+        <button class="button">Search</button>
+      </form>
+    </div>
+    <div class="column-third">
+      <h2 class="heading-small">Mentors</h2>
+      <p>Having a mentor is vital for a successful career. Even more important is having the right mentor.<p></p><a href="">Find a suitable mentor</a></p>
+    </div>
+    <div class="column-third">
+      <h2 class="heading-small">Completed courses</h2>
+      <div class="grid-row">
+        <div class="data column-half">
+          <h2 class="bold-xlarge">24</h2>
+          <p class="bold-xxsmall">Mandatory</p>
+        </div>
+        <div class="data column-half">
+          <h2 class="bold-xlarge">32</h2>
+          <p class="bold-xxsmall">Development</p>
+        </div>
+      </div>
+      <ul>
+        <li class="bold-xsmall">2 courses due soon</li>
+        <li class="bold-xsmall">6 courses in progress</li>
+      </ul>
+    </div>
+  </section>
+  <section class="grid-row section--bottom">
     <div class="column-half">
       <h2 class="heading-small">Mandatory courses</h2>
       <ul class="course-list">
