add a learning record with completed courses

--- a/application/signup/templates/csprofile_learning.html
+++ b/application/signup/templates/csprofile_learning.html
@@ -37,6 +37,7 @@
         <li class="bold-xsmall">2 courses due soon</li>
         <li class="bold-xsmall">6 courses in progress</li>
       </ul>
+      <a class="foot-link" href="/signup/csprofile_learning/record">see complete record</a>
     </div>
   </section>
   <section class="grid-row section--bottom">
