tweaks to learning areas

--- a/application/signup/templates/csprofile_learning.html
+++ b/application/signup/templates/csprofile_learning.html
@@ -19,7 +19,7 @@
     </div>
     <div class="column-third">
       <h2 class="heading-small">Mentors</h2>
-      <p>Having a mentor is vital for a successful career. Even more important is having the right mentor.<p></p><a href="">Find a suitable mentor</a></p>
+      <p>Having a mentor is vital for a successful career. Even more important is having the right mentor.<p></p><a href="">5 suitable mentor matches</a></p>
     </div>
     <div class="column-third">
       <h2 class="heading-small">Completed courses</h2>
