--- a/application/signup/templates/csprofile_learning_record.html
+++ b/application/signup/templates/csprofile_learning_record.html
@@ -4,6 +4,7 @@
 {% include "partials/nav.html" ignore missing %}
 
 <main id="content" role="main">
+  <a href="/signup/csprofile_learning">&lt; back to your learning</a>
   <h1 class="heading-large">Your learning record</h1>
   <table>
     <thead>
