add empty objectives

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -17,6 +17,7 @@
 @import 'components/jobs_history';
 @import 'components/event';
 @import 'components/courses';
+@import 'components/objectives';
 
 // global for all profile based pages
 #global-header-bar {
