--- a/application/signup/templates/csprofile_perf_obj.html
+++ b/application/signup/templates/csprofile_perf_obj.html
@@ -14,7 +14,54 @@
       </section>
     </div>
     <div class="column-three-quarter">
-      <h1 class="heading-large">Performance</h1>
+      <h1 class="heading-large">Objectives</h1>
+      <ul class="objectives">
+        <li class="objective">
+          <h3 class="heading-medium objective__heading">Objective #1</h3>
+          <div class="grid-row objective__body">
+            <div class="column-half objective__part">
+              <h3 class="heading-small">What:</h3>
+            </div>
+            <div class="column-half objective__part">
+              <h3 class="heading-small">How:</h3>
+            </div>
+          </div>
+          <div class="objective__progress">
+            <h3 class="heading-small">Progress:</h3>
+          </div>
+        </li>
+        <li class="objective">
+          <h3 class="heading-medium objective__heading">Objective #2</h3>
+          <div class="grid-row objective__body">
+            <div class="column-half objective__part">
+              <h3 class="heading-small">What:</h3>
+            </div>
+            <div class="column-half objective__part">
+              <h3 class="heading-small">How:</h3>
+            </div>
+          </div>
+          <div class="objective__progress">
+            <h3 class="heading-small">Progress:</h3>
+          </div>
+        </li>
+        <li class="objective">
+          <h3 class="heading-medium objective__heading">Objective #3</h3>
+          <div class="grid-row objective__body">
+            <div class="column-half objective__part">
+              <h3 class="heading-small">What:</h3>
+            </div>
+            <div class="column-half objective__part">
+              <h3 class="heading-small">How:</h3>
+            </div>
+          </div>
+          <div class="objective__progress">
+            <h3 class="heading-small">Progress:</h3>
+          </div>
+        </li>
+      </ul>
+      <section class="section">
+        <button class="button">+ add objective</button>
+      </section>
     </div>
 </main>
 
