--- a/application/jobs/templates/search_by_skill.html
+++ b/application/jobs/templates/search_by_skill.html
@@ -46,7 +46,7 @@
         <p class="heading-medium jd__closing-date">{{ listing.closing }}</p>
         <h4 class="heading-small">Associated skills</h4>
         <ul class="jd__assoc-skills">
-          {% for skill in skills %}
+          {% for skill in listing.skills %}
           <li class="skill" data-skill="{{ skill }}">{{ skill }}</li>
           {% endfor %}
         </ul>
