integrate create account and job search

--- a/application/jobs/static/css/jobs.scss
+++ b/application/jobs/static/css/jobs.scss
@@ -9,6 +9,7 @@
 @import 'components/sections';
 @import 'components/search-results';
 @import 'components/jds';
+@import 'components/signup';
 
 .jd__title h1 {
   margin: $gutter 0 0;
