add basic settings example

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -18,6 +18,7 @@
 @import 'components/event';
 @import 'components/courses';
 @import 'components/objectives';
+@import 'components/settings';
 
 // global for all profile based pages
 #global-header-bar {
