--- a/application/signup/templates/csprofile_jobs_alerts.html
+++ b/application/signup/templates/csprofile_jobs_alerts.html
@@ -14,6 +14,7 @@
       </section>
     </div>
     <div class="column-three-quarter">
+      {% include "partials/settings.html" ignore missing %}
       <h1 class="heading-large">Your job alerts</h1>
       <p class="lede">Below are the job alerts you currently have set up</p>
       {% include "partials/job_alerts.html" ignore missing %}
