--- a/application/signup/templates/basicprofile_jobs.html
+++ b/application/signup/templates/basicprofile_jobs.html
@@ -15,7 +15,15 @@
   </section>
   <section class="column-three-quarter">
     {% include "partials/job_search.html" ignore missing %}
+    {% include "partials/jd_listings.html" ignore missing %}
   </section>
 </main>
 
+{% endblock %}
+
+{% block body_end %}
+  {{ super() }}
+  {% assets "js_profile_jobs" %}
+    <script src="{{ ASSET_URL }}"></script>
+  {% endassets %}
 {% endblock %}
