create a basic todo list with categories

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -19,6 +19,7 @@
 @import 'components/courses';
 @import 'components/objectives';
 @import 'components/settings';
+@import 'components/todo';
 
 // global for all profile based pages
 #global-header-bar {
