--- a/application/signup/static/css/components/_helpers.scss
+++ b/application/signup/static/css/components/_helpers.scss
@@ -7,3 +7,9 @@
     margin-right: $gutter-half;
   }
 }
+
+@mixin circle($dimension) {
+  width: $dimension;
+  height: $dimension;
+  border-radius: 50%;
+}
