add more welcoming welcome section

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -20,6 +20,7 @@
 @import 'components/objectives';
 @import 'components/settings';
 @import 'components/todo';
+@import 'components/welcome';
 
 // global for all profile based pages
 #global-header-bar {
