--- a/application/signup/templates/partials/todo_list.html
+++ b/application/signup/templates/partials/todo_list.html
@@ -1,5 +1,5 @@
 <section class="todo__widget">
-  <h2 class="heading-medium">To do list</h2>
+  <h2 class="heading-medium">Your to do list</h2>
   <ul class="todo__list">
 
     {% for todo in person.todos %}
