add week availability view

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -21,6 +21,7 @@
 @import 'components/settings';
 @import 'components/todo';
 @import 'components/welcome';
+@import 'components/week-view';
 
 // global for all profile based pages
 #global-header-bar {
