add some key info to the profile

--- a/application/signup/templates/csprofile.html
+++ b/application/signup/templates/csprofile.html
@@ -9,6 +9,7 @@
       <section class="container">
       {% include "partials/basicprofile.html" ignore missing %}
       </section>
+      {% include "partials/profile/key-info.html" ignore missing %}
       {% include "partials/week_availability.html" ignore missing %}
     </div>
     <div class="column-two-thirds">
