--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -73,3 +73,13 @@
 .foot-link {
   font-size: 16px;
 }
+
+.key-info__wrap {
+  //border: 1px solid $grey-4;
+  padding: 5px;
+  //box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.1);
+
+  td + td {
+    padding-right: 0;
+  }
+}
