add objectives content

--- a/application/signup/templates/csprofile_perf_obj.html
+++ b/application/signup/templates/csprofile_perf_obj.html
@@ -17,13 +17,15 @@
       <h1 class="heading-large">Objectives</h1>
       <ul class="objectives">
         <li class="objective">
-          <h3 class="heading-medium objective__heading">Objective #1</h3>
+          <h3 class="heading-medium objective__heading">Objective 1</h3>
           <div class="grid-row objective__body">
             <div class="column-half objective__part">
               <h3 class="heading-small">What:</h3>
+              <p>Build and test 5 prototypes for new cross government project by May 29th, 2015</p>
             </div>
             <div class="column-half objective__part">
               <h3 class="heading-small">How:</h3>
+              <p>Work with back-end developer, user researcher, business analyst and content designer on concept and design. Test with users once each prototype is completed, and iterate.</p>
             </div>
           </div>
           <div class="objective__progress">
@@ -31,27 +33,36 @@
           </div>
         </li>
         <li class="objective">
-          <h3 class="heading-medium objective__heading">Objective #2</h3>
+          <h3 class="heading-medium objective__heading">Objective 2</h3>
           <div class="grid-row objective__body">
             <div class="column-half objective__part">
               <h3 class="heading-small">What:</h3>
+              <p>Recruit new full-time front-end developer by June 20th, 2015</p>
             </div>
             <div class="column-half objective__part">
               <h3 class="heading-small">How:</h3>
+              <p>Work with HR on job description, post vacancy on Linkedin and Civil Service Jobs</p>
             </div>
           </div>
           <div class="objective__progress">
             <h3 class="heading-small">Progress:</h3>
+            <ul class="list-bullet">
+              <li>job description completed and vacancy posted online</li>
+              <li>received 20 CVs to date (20/5/15)</li>
+              <li>identified 3 potential candidates</li>
+            </ul>
           </div>
         </li>
         <li class="objective">
-          <h3 class="heading-medium objective__heading">Objective #3</h3>
+          <h3 class="heading-medium objective__heading">Objective 3</h3>
           <div class="grid-row objective__body">
             <div class="column-half objective__part">
               <h3 class="heading-small">What:</h3>
+              <p>Present findings of cross government project at <a href="http://www.generateconf.com/london-2015">Generate London</a> 2015 (17th & 18th Sept).</p>
             </div>
             <div class="column-half objective__part">
               <h3 class="heading-small">How:</h3>
+              <p>Collect results from Objective 1 when completed. Start working on presentation by August 15th, 2015. </p>
             </div>
           </div>
           <div class="objective__progress">
