--- a/application/signup/static/css/components/_objectives.scss
+++ b/application/signup/static/css/components/_objectives.scss
@@ -14,6 +14,10 @@
 }
 .objective__body {
   @extend %contain-floats;
+
+  p {
+    margin-bottom: 0;
+  }
 }
 .objective__part {
   padding: $gutter-half $gutter;
