add a next meeting widget

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -22,6 +22,7 @@
 @import 'components/todo';
 @import 'components/welcome';
 @import 'components/week-view';
+@import 'components/next-meeting';
 
 // global for all profile based pages
 #global-header-bar {
