--- a/application/signup/templates/csprofile.html
+++ b/application/signup/templates/csprofile.html
@@ -11,6 +11,9 @@
       </section>
       {% include "partials/profile/key-info.html" ignore missing %}
       {% include "partials/week_availability.html" ignore missing %}
+      <section class="section">
+        {% include "partials/profile/next-meeting.html" ignore missing %}
+      </section>
     </div>
     <div class="column-two-thirds">
       {% include "partials/people_finder.html" ignore missing %}
