integrate people service

--- a/application/signup/templates/csprofile.html
+++ b/application/signup/templates/csprofile.html
@@ -18,6 +18,7 @@
     <div class="column-two-thirds">
       {% include "partials/people_finder.html" ignore missing %}
       {% include "partials/add_expenses_widget.html" ignore missing %}
+      {# include "partials/add_services.html" ignore missing #}
       {% include "partials/todo_list.html" ignore missing %}
     <div>
   </div>
