add personal details of application

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -23,6 +23,8 @@
 @import 'components/welcome';
 @import 'components/week-view';
 @import 'components/next-meeting';
+@import 'components/progresslist';
+@import 'components/data-item';
 
 // global for all profile based pages
 #global-header-bar {
